fix: Ajustando o GET/mine de bookings